# object-oriented-programming-NikolayTsirulev-2-course

./: README.md
lab01/: CMakeLists.txt  README.md  func.cpp  func.h  task01.cpp  tests01.cpp
lab02/: CMakeLists.txt  main.cpp
lab02/include/: Seven.h
lab02/src/: Seven.cpp
lab02/test/: test.cpp
lab03/: CMakeLists.txt  main.cpp
lab03/include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  vertex.hpp
lab03/src/: array.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp  vertex.cpp
lab03/test/: test.cpp
lab04/: main.cpp
lab04/include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
lab04/test/: test.cpp
lab05/: CMakeLists.txt  main.cpp
lab05/include/: allocator.hpp  stack.hpp
lab05/test/: test.cpp
lab06/: CMakeLists.txt  main.cpp
lab06/include/: dragon.hpp  elf.hpp  factory.hpp  knight.hpp  npc.hpp  visitor.hpp
lab06/src/: dragon.cpp  elf.cpp  factory.cpp  knight.cpp  npc.cpp  observer.cpp  visitor.cpp
lab06/test/: test.cpp
lab4/: CMakeLists.txt
lab7/: CMakeLists.txt  main.cpp
lab7/include/: dragon.hpp  elf.hpp  knight.hpp  npc.hpp  observer.hpp
lab7/src/: dragon.cpp  elf.cpp  knight.cpp  npc.cpp
lab7/test/: test.cpp
